--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "/home/matt/Documents/python/venvs/data/bin/python3"
+  "python.pythonPath": "/home/matt/Documents/python/venvs/data/bin/python3",
+  "python.linting.pep8Enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true
 }
