update requests package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["MatthewJDavis <matthewdavis111@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-requests = "^2.23.0"
 untangle = "^1.1.1"
+Requests = "^2.24.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
